# predefined-container-orchestration

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: .pylintrc  Dockerfile  devcontainer.json
doc/: examples.md
examples/: all_metrics_config.yml  failure_scenarios_config.yml  memory_ram_config.yml  network_load_config.yml  operation_scenarios_config.yml  scheduler_edf_config.yml
make/: make.mk
src/: main.py
src/task_allocation_problem/: scenario_manager.py  task_allocation_problem.py
src/task_allocation_problem/metrics/: __init__.py  memory.py  metric.py  network.py  scenarios.py  scheduler.py
src/utils/: common.py  configuration_parser.py  generator.py  logger.py  metric_helper.py
