[project]
name = "predefined_container_orchestration"
version = "0.0.1"
authors = [{name = "Lukas Stahlbock", email = "lukas.stahlbock@iav.de"}]
description = "Algorithm to calculate orchestrations for different scenarios"
dependencies = [
    "cvxpy==1.4.3",
    "cylp==0.92.3",
    "pyscipopt==5.1.1",
    "PyYAML==6.0.2"
]
requires-python = "== 3.12.*"
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.12"
]
license = "Apache-2.0"
license-file = ["LICENSE"]

[project.optional-dependencies]
dev = [
    "mypy==1.17.0"
]

# global mypy options
[tool.mypy]
warn_return_any = true
disable_error_code = ["import-untyped"]
exclude = ['.venv']
